--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "@subql/network-client",
+  "name": "@subql/network-tools",
   "version": "0.3.0",
   "description": "Client sdk for Subquery Network",
   "scripts": {
@@ -15,7 +15,7 @@
     "@actions/core": "^1.9.1",
     "@apollo/client": "^3.7.0",
     "@metamask/eth-sig-util": "^4.0.1",
-    "@subql/contract-sdk": "^0.12.5-0",
+    "@subql/contract-sdk": "^0.13.0",
     "@types/jest": "^28.1.6",
     "@types/react": "^18.0.12",
     "@typescript-eslint/eslint-plugin": "^5.27.0",
@@ -41,6 +41,7 @@
     "ts-node": "^10.8.1"
   },
   "workspaces": [
+    "packages/network-config",
     "packages/network-query",
     "packages/apollo-links",
     "packages/network-clients",
