--- a/packages/network-clients/package.json
+++ b/packages/network-clients/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@apollo/client": "^3.7.0",
     "@ethersproject/bignumber": "^5.7.0",
+    "@subql/network-config": "workspace:*",
     "@subql/network-query": "workspace:*",
     "axios": "^0.27.2",
     "buffer": "^6.0.3",
@@ -24,7 +25,7 @@
     "typescript": "^4.6.4"
   },
   "peerDependencies": {
-    "@subql/contract-sdk": "^0.12.5-0",
+    "@subql/contract-sdk": "^0.13.0",
     "ipfs-http-client": "^53.0.1"
   },
   "stableVersion": "0.3.2"
