--- a/packages/network-clients/package.json
+++ b/packages/network-clients/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@subql/network-clients",
-  "version": "0.3.3-0",
+  "version": "0.3.3-1",
   "description": "SubQuery client sdk for network",
   "main": "dist/index.js",
   "author": "SubQuery Pte Limited",
@@ -28,5 +28,5 @@
     "@subql/contract-sdk": "^0.13.0",
     "ipfs-http-client": "^53.0.1"
   },
-  "stableVersion": "0.3.2"
+  "stableVersion": "0.3.3-0"
 }
