--- a/packages/apollo-links/package.json
+++ b/packages/apollo-links/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@metamask/eth-sig-util": "4.0.1",
+    "apollo-link-error": "^1.1.13",
     "axios": "^0.27.2",
     "buffer": "^6.0.3",
     "ethers": "^5.6.8",
