--- a/packages/apollo-links/package.json
+++ b/packages/apollo-links/package.json
@@ -14,7 +14,8 @@
     "axios": "^0.27.2",
     "buffer": "^6.0.3",
     "ethers": "^5.6.8",
-    "jwt-decode": "^3.1.2"
+    "jwt-decode": "^3.1.2",
+    "pino": "^8.14.1"
   },
   "devDependencies": {
     "apollo": "^2.34.0",
