--- a/packages/apollo-links/package.json
+++ b/packages/apollo-links/package.json
@@ -14,11 +14,11 @@
     "axios": "^0.27.2",
     "buffer": "^6.0.3",
     "ethers": "^5.6.8",
-    "jwt-decode": "^3.1.2",
-    "pino": "^8.14.1"
+    "jwt-decode": "^3.1.2"
   },
   "devDependencies": {
     "apollo": "^2.34.0",
+    "pino": "^8.14.1",
     "typescript": "^4.6.4"
   },
   "peerDependencies": {
