Fix build issue

--- a/packages/network-config/package.json
+++ b/packages/network-config/package.json
@@ -6,7 +6,7 @@
   "author": "SubQuery Pte Limited",
   "license": "Apache-2.0",
   "scripts": {
-    "build": "yarn tsc -b"
+    "build": "tsc -b"
   },
   "devDependencies": {
     "typescript": "^4.8.4"
