--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@actions/core": "^1.9.1",
     "@apollo/client": "^3.7.0",
     "@metamask/eth-sig-util": "^4.0.1",
+    "@octokit/request": "^5.6.3",
     "@subql/contract-sdk": "^0.13.0",
     "@types/jest": "^28.1.6",
     "@types/react": "^18.0.12",
