--- a/package.json
+++ b/package.json
@@ -1,6 +1,5 @@
 {
   "name": "@subql/network-tools",
-  "version": "0.3.0",
   "description": "Client sdk for Subquery Network",
   "scripts": {
     "build": "yarn workspaces foreach -pt run build",
@@ -15,6 +14,7 @@
     "@actions/core": "^1.9.1",
     "@apollo/client": "^3.7.0",
     "@metamask/eth-sig-util": "^4.0.1",
+    "@octokit/request": "^5.6.3",
     "@subql/contract-sdk": "^0.13.0",
     "@types/jest": "^28.1.6",
     "@types/react": "^18.0.12",
