--- a/packages/apollo-links/package.json
+++ b/packages/apollo-links/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@subql/apollo-links",
-  "version": "0.4.0",
+  "version": "0.4.1-0",
   "description": "SubQuery Network - graphql links",
   "main": "dist/index.js",
   "author": "SubQuery Pte Limited",
@@ -24,5 +24,6 @@
   "peerDependencies": {
     "@apollo/client": "*",
     "graphql": "*"
-  }
+  },
+  "stableVersion": "0.4.0"
 }
