--- a/packages/network-config/package.json
+++ b/packages/network-config/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@subql/network-config",
-  "version": "0.3.3-4",
+  "version": "0.3.4",
   "main": "dist/index.js",
   "description": "SubQuery package containing network configuration",
   "author": "SubQuery Pte Limited",
@@ -12,7 +12,7 @@
     "typescript": "^4.8.4"
   },
   "peerDependencies": {
-    "@subql/contract-sdk": "^0.13.0",
+    "@subql/contract-sdk": "^0.13.5",
     "ipfs-http-client": "^53.0.1"
   },
   "stableVersion": "0.3.3-3"
