--- a/packages/apollo-links/package.json
+++ b/packages/apollo-links/package.json
@@ -2,7 +2,7 @@
   "name": "@subql/apollo-links",
   "version": "0.5.2",
   "description": "SubQuery Network - graphql links",
-  "main": "src/index.ts",
+  "main": "dist/index.js",
   "author": "SubQuery Pte Limited",
   "license": "Apache-2.0",
   "scripts": {
