--- a/package.json
+++ b/package.json
@@ -25,8 +25,12 @@
     "ctix": "^1.5.4",
     "dotenv": "^16.0.3",
     "eslint": "^8.17.0",
+    "eslint-config-prettier": "^8.3.0",
+    "eslint-import-resolver-typescript": "^2.5.0",
     "eslint-plugin-header": "^3.1.1",
+    "eslint-plugin-import": "^2.25.4",
     "eslint-plugin-prettier": "^4.0.0",
+    "eslint-plugin-sort-destructure-keys": "^1.4.0",
     "flag": "^5.0.1",
     "graphql": "^16.5.0",
     "graphql-language-service-server": "^2.8.9",
