--- a/packages/react-hooks/package.json
+++ b/packages/react-hooks/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@subql/react-hooks",
-  "version": "0.3.16-0",
+  "version": "0.3.16-1",
   "description": "SubQuery client sdk for react hooks",
   "main": "dist/index.js",
   "author": "SubQuery Pte Limited",
@@ -34,5 +34,5 @@
     "graphql": "^16.5.0",
     "react": "^17"
   },
-  "stableVersion": "0.3.15"
+  "stableVersion": "0.3.16-0"
 }
