--- a/packages/network-clients/package.json
+++ b/packages/network-clients/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@subql/network-clients",
-  "version": "0.3.16-0",
+  "version": "0.3.17",
   "description": "SubQuery client sdk for network",
   "main": "dist/index.js",
   "author": "SubQuery Pte Limited",
@@ -25,7 +25,7 @@
     "typescript": "^4.6.4"
   },
   "peerDependencies": {
-    "@subql/contract-sdk": "^0.13.7",
+    "@subql/contract-sdk": "^0.15.0",
     "ipfs-http-client": "^53.0.1"
   },
   "stableVersion": "0.3.15"
