--- a/packages/apollo-links/package.json
+++ b/packages/apollo-links/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@subql/apollo-links",
-  "version": "0.5.9-0",
+  "version": "0.5.9-1",
   "description": "SubQuery Network - graphql links",
   "main": "dist/index.js",
   "author": "SubQuery Pte Limited",
@@ -25,5 +25,5 @@
     "@apollo/client": "*",
     "graphql": "*"
   },
-  "stableVersion": "0.5.8"
+  "stableVersion": "0.5.9-0"
 }
