--- a/packages/apollo-links/package.json
+++ b/packages/apollo-links/package.json
@@ -13,6 +13,7 @@
     "apollo-link-error": "^1.1.13",
     "axios": "^0.27.2",
     "buffer": "^6.0.3",
+    "cross-fetch": "^4.0.0",
     "ethers": "^5.6.8",
     "jwt-decode": "^3.1.2",
     "lru-cache": "^10.0.1"
