--- a/packages/react-hooks/tsconfig.json
+++ b/packages/react-hooks/tsconfig.json
@@ -4,8 +4,10 @@
     "target": "es2017",
     "sourceMap": true,
     "rootDir": "./src",
-    "outDir": "./dist"
+    "outDir": "./dist",
+    "jsx": "react-jsx",
+
   },
   "include": ["src/**/*"],
-  "exclude": ["**/*spec.ts"]
+  "exclude": ["**/*spec.ts"],
 }
