--- a/packages/network-config/package.json
+++ b/packages/network-config/package.json
@@ -1,7 +1,7 @@
 {
   "name": "@subql/network-config",
   "version": "0.3.16",
-  "main": "src/index.ts",
+  "main": "dist/index.js",
   "description": "SubQuery package containing network configuration",
   "author": "SubQuery Pte Limited",
   "license": "Apache-2.0",
