--- a/packages/react-hooks/tsconfig.json
+++ b/packages/react-hooks/tsconfig.json
@@ -5,9 +5,8 @@
     "sourceMap": true,
     "rootDir": "./src",
     "outDir": "./dist",
-    "jsx": "react-jsx",
-
+    "jsx": "react-jsx"
   },
   "include": ["src/**/*"],
-  "exclude": ["**/*spec.ts"],
+  "exclude": ["**/*spec.ts"]
 }
