chore: remove useless

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -21,7 +21,9 @@
     "skipLibCheck": true,                             /* Skip type checking all .d.ts files. */
     "allowSyntheticDefaultImports": true,
     "resolveJsonModule": true,
-    "types": ["node", "jest"]
+    "types": ["node", "jest"],
+    "jsx": "react-jsx"
+    
   },
   "include": ["packages/**/*","test"],
   "exclude": ["**/node_modules/**"]
