--- a/package.json
+++ b/package.json
@@ -16,8 +16,9 @@
     "@metamask/eth-sig-util": "^4.0.1",
     "@octokit/request": "^5.6.3",
     "@subql/contract-sdk": "^0.16.2",
+    "@testing-library/react": "^14.0.0",
     "@types/jest": "^28.1.6",
-    "@types/react": "^18.0.12",
+    "@types/react": "^18.2.28",
     "@typescript-eslint/eslint-plugin": "^5.27.0",
     "@typescript-eslint/parser": "^5.27.0",
     "axios": "^0.27.2",
@@ -32,11 +33,13 @@
     "husky": "^8.0.1",
     "ipfs-http-client": "^53.0.1",
     "jest": "^29.6.2",
+    "jest-environment-jsdom": "^29.7.0",
     "jest-mock-axios": "^4.7.2",
     "jwt-decode": "^3.1.2",
     "lint-staged": "^13.0.0",
     "prettier": "^2.7.1",
     "react": "^18.1.0",
+    "react-dom": "^18.2.0",
     "ts-jest": "^29.1.1",
     "ts-node": "^10.8.1"
   },
