--- a/packages/apollo-links/package.json
+++ b/packages/apollo-links/package.json
@@ -15,6 +15,7 @@
     "buffer": "^6.0.3",
     "cross-fetch": "^4.0.0",
     "ethers": "^5.6.8",
+    "js-base64": "^3.7.5",
     "jwt-decode": "^3.1.2",
     "lru-cache": "^10.0.1"
   },
