--- a/packages/apollo-links/package.json
+++ b/packages/apollo-links/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@subql/apollo-links",
-  "version": "1.0.9-0",
+  "version": "1.1.0",
   "description": "SubQuery Network - graphql links",
   "main": "dist/index.js",
   "author": "SubQuery Pte Limited",
@@ -15,6 +15,7 @@
     "buffer": "^6.0.3",
     "cross-fetch": "^4.0.0",
     "ethers": "^5.6.8",
+    "js-base64": "^3.7.5",
     "jwt-decode": "^3.1.2",
     "lru-cache": "^10.0.1"
   },
