--- a/packages/apollo-links/package.json
+++ b/packages/apollo-links/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@subql/apollo-links",
-  "version": "1.1.0",
+  "version": "1.1.1-0",
   "description": "SubQuery Network - graphql links",
   "main": "dist/index.js",
   "author": "SubQuery Pte Limited",
@@ -28,5 +28,5 @@
     "@apollo/client": "*",
     "graphql": "*"
   },
-  "stableVersion": "1.0.8"
+  "stableVersion": "1.1.0"
 }
