--- a/packages/react-hooks/package.json
+++ b/packages/react-hooks/package.json
@@ -2,7 +2,7 @@
   "name": "@subql/react-hooks",
   "version": "0.3.16-19",
   "description": "SubQuery client sdk for react hooks",
-  "main": "dist/index.js",
+  "main": "src/index.ts",
   "author": "SubQuery Pte Limited",
   "license": "Apache-2.0",
   "scripts": {
