--- a/package.json
+++ b/package.json
@@ -24,9 +24,12 @@
     "axios": "^0.27.2",
     "ctix": "^1.5.4",
     "dotenv": "^16.0.3",
-    "eslint": "^8.17.0",
+    "eslint": "^8.42.0",
+    "eslint-config-prettier": "^8.8.0",
     "eslint-plugin-header": "^3.1.1",
-    "eslint-plugin-prettier": "^4.0.0",
+    "eslint-plugin-import": "2.27.5",
+    "eslint-plugin-prettier": "^4.2.1",
+    "eslint-plugin-sort-destructure-keys": "^1.5.0",
     "flag": "^5.0.1",
     "graphql": "^16.5.0",
     "graphql-language-service-server": "^2.8.9",
