--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -35,6 +35,14 @@ jobs:
         with:
           node-version: 16
 
+      - name: Set network env for main branch
+        if: github.ref == 'refs/heads/main'
+        run: echo "NETWORK=kepler" >> $GITHUB_ENV
+
+      - name: Set network env for develop branch
+        if: github.ref == 'refs/heads/develop'
+        run: echo "NETWORK=testnet" >> $GITHUB_ENV
+
       #Identify changes
       - uses: marceloprado/has-changed-path@v1
         id: changed-network-config
