--- a/packages/network-config/package.json
+++ b/packages/network-config/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@subql/network-config",
-  "version": "0.100.0",
+  "version": "0.100.1-0",
   "main": "dist/index.js",
   "description": "SubQuery package containing network configuration",
   "author": "SubQuery Pte Limited",
@@ -15,5 +15,5 @@
     "@subql/contract-sdk": "^0.100.2",
     "ipfs-http-client": "^53.0.1"
   },
-  "stableVersion": "0.3.17-1"
+  "stableVersion": "0.100.0"
 }
