--- a/packages/eth-provider/package.json
+++ b/packages/eth-provider/package.json
@@ -1,7 +1,7 @@
 {
   "name": "@subql/eth-provider",
   "version": "0.1.0",
-  "main": "dist/index.js",
+  "main": "src/index.ts",
   "author": "SubQuery Pte Limited",
   "license": "Apache-2.0",
   "scripts": {
