--- a/packages/network-support/package.json
+++ b/packages/network-support/package.json
@@ -16,7 +16,8 @@
     "lru-cache": "^10.0.1"
   },
   "devDependencies": {
-    "@types/node": "18"
+    "@types/node": "18",
+    "typescript": "^4.6.4"
   },
   "browser": {
     "node-fetch": false
