--- a/packages/apollo-links/package.json
+++ b/packages/apollo-links/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@subql/apollo-links",
-  "version": "1.2.2",
+  "version": "1.2.3",
   "description": "SubQuery Network - graphql links",
   "main": "dist/index.js",
   "author": "SubQuery Pte Limited",
@@ -10,8 +10,8 @@
   },
   "dependencies": {
     "@metamask/eth-sig-util": "5.1.0",
+    "@subql/network-support": "workspace:*",
     "apollo-link-error": "^1.1.13",
-    "axios": "^0.27.2",
     "buffer": "^6.0.3",
     "cross-fetch": "^4.0.0",
     "ethers": "^5.6.8",
