feat: upgrade to new sdk

--- a/.yarnrc.yml
+++ b/.yarnrc.yml
@@ -1,11 +1,13 @@
 nodeLinker: node-modules
 
+npmAuthToken: "${NPM_AUTH_TOKEN:-}"
+
+httpTimeout: 30000
+
 plugins:
   - path: .yarn/plugins/@yarnpkg/plugin-workspace-tools.cjs
     spec: "@yarnpkg/plugin-workspace-tools"
   - path: .yarn/plugins/@yarnpkg/plugin-version.cjs
     spec: "@yarnpkg/plugin-version"
-
-npmAuthToken: "${NPM_AUTH_TOKEN:-}"
 
 yarnPath: .yarn/releases/yarn-3.2.4.cjs
