--- a/packages/react-hooks/package.json
+++ b/packages/react-hooks/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@subql/react-hooks",
-  "version": "0.100.3-1",
+  "version": "0.100.4",
   "description": "SubQuery client sdk for react hooks",
   "main": "dist/index.js",
   "author": "SubQuery Pte Limited",
@@ -35,7 +35,7 @@
     "typescript": "^4.6.4"
   },
   "peerDependencies": {
-    "@subql/contract-sdk": "^0.100.2",
+    "@subql/contract-sdk": "^0.111.0",
     "graphql": "^16.5.0",
     "react": "^18"
   },
