--- a/packages/apollo-links/package.json
+++ b/packages/apollo-links/package.json
@@ -1,8 +1,8 @@
 {
   "name": "@subql/apollo-links",
-  "version": "1.2.5",
+  "version": "1.2.6",
   "description": "SubQuery Network - graphql links",
-  "main": "src/index.ts",
+  "main": "dist/index.js",
   "author": "SubQuery Pte Limited",
   "license": "Apache-2.0",
   "scripts": {
