--- a/packages/network-clients/package.json
+++ b/packages/network-clients/package.json
@@ -9,7 +9,6 @@
     "build": "tsc -b"
   },
   "dependencies": {
-    "@apollo/client": "^3.7.0",
     "@ethersproject/bignumber": "^5.7.0",
     "@subql/network-config": "workspace:*",
     "@subql/network-query": "workspace:*",
@@ -20,11 +19,13 @@
     "graphql": "^16.5.0"
   },
   "devDependencies": {
+    "@apollo/client": "^3.8.0",
     "apollo": "^2.34.0",
     "create-ts-index": "^1.14.0",
     "typescript": "^4.6.4"
   },
   "peerDependencies": {
+    "@apollo/client": "*",
     "@subql/contract-sdk": "^0.112.0",
     "ipfs-http-client": "^53.0.1"
   },
