--- a/packages/apollo-links/package.json
+++ b/packages/apollo-links/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@subql/apollo-links",
-  "version": "1.3.0",
+  "version": "1.3.1-0",
   "description": "SubQuery Network - graphql links",
   "main": "dist/index.js",
   "author": "SubQuery Pte Limited",
@@ -27,5 +27,5 @@
   "peerDependencies": {
     "graphql": "*"
   },
-  "stableVersion": "1.2.0"
+  "stableVersion": "1.3.0"
 }
