--- a/packages/react-hooks/package.json
+++ b/packages/react-hooks/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@subql/react-hooks",
-  "version": "0.114.0",
+  "version": "0.114.1-0",
   "description": "SubQuery client sdk for react hooks",
   "main": "dist/index.js",
   "author": "SubQuery Pte Limited",
@@ -39,5 +39,5 @@
     "graphql": "^16.5.0",
     "react": "^18"
   },
-  "stableVersion": "0.112.1-3"
+  "stableVersion": "0.114.0"
 }
