--- a/packages/network-config/package.json
+++ b/packages/network-config/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@subql/network-config",
-  "version": "0.114.1-1",
+  "version": "1.0.0",
   "main": "dist/index.js",
   "description": "SubQuery package containing network configuration",
   "author": "SubQuery Pte Limited",
