--- a/packages/network-clients/package.json
+++ b/packages/network-clients/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@subql/network-clients",
-  "version": "0.114.1-0",
+  "version": "1.0.0",
   "description": "SubQuery client sdk for network",
   "main": "dist/index.js",
   "author": "SubQuery Pte Limited",
@@ -26,7 +26,7 @@
   },
   "peerDependencies": {
     "@apollo/client": "*",
-    "@subql/contract-sdk": "^0.114.0",
+    "@subql/contract-sdk": "^1.0.0",
     "ipfs-http-client": "^53.0.1"
   },
   "stableVersion": "0.114.0"
