--- a/packages/apollo-links/package.json
+++ b/packages/apollo-links/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@subql/apollo-links",
-  "version": "1.100.1-0",
+  "version": "1.3.2",
   "description": "SubQuery Network - graphql links",
   "main": "dist/index.js",
   "author": "SubQuery Pte Limited",
@@ -9,12 +9,12 @@
     "build": "tsc -b"
   },
   "dependencies": {
+    "@apollo/client": "^3.8.8",
     "@metamask/eth-sig-util": "5.1.0",
+    "@subql/network-support": "workspace:*",
     "apollo-link-error": "^1.1.13",
-    "axios": "^0.27.2",
     "buffer": "^6.0.3",
     "cross-fetch": "^4.0.0",
-    "ethers": "^5.6.8",
     "js-base64": "^3.7.5",
     "jwt-decode": "^3.1.2",
     "lru-cache": "^10.0.1"
@@ -25,8 +25,7 @@
     "typescript": "^4.6.4"
   },
   "peerDependencies": {
-    "@apollo/client": "*",
     "graphql": "*"
   },
-  "stableVersion": "1.100.0"
+  "stableVersion": "1.3.0"
 }
