[SKIP CI] Prerelease

--- a/packages/network-support/package.json
+++ b/packages/network-support/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@subql/network-support",
-  "version": "1.0.1",
+  "version": "1.0.2-0",
   "main": "dist/index.js",
   "author": "SubQuery Pte Limited",
   "license": "Apache-2.0",
@@ -21,5 +21,6 @@
   },
   "browser": {
     "node-fetch": false
-  }
+  },
+  "stableVersion": "1.0.1"
 }
