--- a/packages/network-support/package.json
+++ b/packages/network-support/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@subql/network-support",
-  "version": "1.0.2-0",
+  "version": "1.0.2",
   "main": "dist/index.js",
   "author": "SubQuery Pte Limited",
   "license": "Apache-2.0",
