--- a/packages/network-support/package.json
+++ b/packages/network-support/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@subql/network-support",
-  "version": "1.1.0",
+  "version": "1.1.1-0",
   "main": "dist/index.js",
   "author": "SubQuery Pte Limited",
   "license": "Apache-2.0",
@@ -22,5 +22,5 @@
   "browser": {
     "node-fetch": false
   },
-  "stableVersion": "1.0.1"
+  "stableVersion": "1.1.0"
 }
