--- a/packages/react-hooks/package.json
+++ b/packages/react-hooks/package.json
@@ -2,7 +2,7 @@
   "name": "@subql/react-hooks",
   "version": "1.1.2-6",
   "description": "SubQuery client sdk for react hooks",
-  "main": "dist/index.js",
+  "main": "src/index.ts",
   "author": "SubQuery Pte Limited",
   "license": "Apache-2.0",
   "scripts": {
@@ -35,7 +35,7 @@
     "typescript": "^4.6.4"
   },
   "peerDependencies": {
-    "@subql/contract-sdk": "^1.0.0",
+    "@subql/contract-sdk": "^1.0.3",
     "graphql": "^16.5.0",
     "react": "^18"
   },
