--- a/packages/network-query/package.json
+++ b/packages/network-query/package.json
@@ -1,7 +1,7 @@
 {
   "name": "@subql/network-query",
   "version": "1.1.2-5",
-  "main": "src/index.ts",
+  "main": "dist/index.js",
   "description": "SubQuery package containing all gql queries for network dapps",
   "author": "SubQuery Pte Limited",
   "license": "Apache-2.0",
