feat: improve price weight

--- a/packages/network-support/package.json
+++ b/packages/network-support/package.json
@@ -10,6 +10,7 @@
   "packageManager": "yarn@3.2.4",
   "dependencies": {
     "@metamask/eth-sig-util": "^7.0.0",
+    "bignumber.js": "^9.1.2",
     "cross-fetch": "^4.0.0",
     "crypto-js": "^4.2.0",
     "js-base64": "^3.7.5",
