--- a/packages/eth-provider/package.json
+++ b/packages/eth-provider/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@subql/eth-provider",
-  "version": "1.1.1",
+  "version": "1.1.2-0",
   "main": "dist/index.js",
   "author": "SubQuery Pte Limited",
   "license": "Apache-2.0",
@@ -12,5 +12,6 @@
     "@ethersproject/providers": "^5.7.2",
     "@subql/network-support": "workspace:*",
     "typescript": "^4.6.4"
-  }
+  },
+  "stableVersion": "1.1.1"
 }
