--- a/packages/network-config/package.json
+++ b/packages/network-config/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@subql/network-config",
-  "version": "1.1.2-0",
+  "version": "1.1.2-1",
   "main": "dist/index.js",
   "description": "SubQuery package containing network configuration",
   "author": "SubQuery Pte Limited",
@@ -15,5 +15,5 @@
     "@subql/contract-sdk": "^1.0.3",
     "ipfs-http-client": "^53.0.1"
   },
-  "stableVersion": "1.1.1"
+  "stableVersion": "1.1.2-0"
 }
